# Projetos-TADS

./: .gitignore  index.html
1P - TADS 2025.1/: portfolio.html  projeto.html
1P - TADS 2025.1/LING. PROG 1 (C)/: CONVERSOR_MOEDA.C
1P - TADS 2025.1/LING. PROG 1 (C)/listas de exercícios - desafios/: LISTA 1.odt  LISTA 2.odt  PROVA ANTERIOR MARCOS.odt
1P - TADS 2025.1/WEB DEV 1/Atividade - FlexBox/: style.css
1P - TADS 2025.1/WEB DEV 1/CV - Nathan Borges (c/: CV - Nathan Borges (tailwind).html  CV - Nathan Borges.html  PALETA DE CORES.txt
1P - TADS 2025.1/WEB DEV 1/Projeto genérico 1/: pagina.html  pagina_pessoal.html
1P - TADS 2025.1/WEB DEV 1/Prova - Projeto 2a unid - Meu Portifólio/: contato.html  index.html  portfolio.html
2P - TADS 2025.2/BD/: biblio.db  revisao.db  vendas.db
2P - TADS 2025.2/POO - JAVA/: .gitignore
3P_TADS_2026.1/ALGORITMOS E ED/AULA 2026_04_08/AULA 2026_04_08/: CMakeLists.txt  maior.cpp  reverse.cpp  rotate.cpp  strings.cpp
3P_TADS_2026.1/APS/: VetorZero.asta
LING. PROG 1 (C)/: projeto.c  projeto1.c  texto.txt
LING. PROG 1 (C)/listas de exercícios - desafios/: LISTA 3.odt  LISTA 7.odt  LISTA 8.odt
WEB DEV 1/(TW) Prova - Projeto Mercado TADS - TAILWIND/: index.html  package-lock.json  package.json
WEB DEV 1/Atividade - FlexBox/: index.html
WEB DEV 1/Prova - Projeto 2a unid - Meu Portifólio/: contato.html  index.html  portfolio.html  projeto.html
WEB DEV 1/Prova - Projeto Mercado TADS/: style.css
WEB DEV 1/object_fit_position/: TESTE - OBJECT_FIT.html
assets/css/: style.css
(+215 files in other folders)
