cmake_minimum_required(VERSION 4.2)
project(AULA_2026_04_08)

set(CMAKE_CXX_STANDARD 20)

    add_executable(prob1_parte1 rotate.cpp)
    add_executable(prob1_parte2 maior.cpp)
    add_executable(prob2_parte1 strings.cpp)
    add_executable(prob2_parte2 reverse.cpp)
add_executable(probTeste strings1.cpp)